<resources>
    <string name="app_name">MS2 Boss Timer</string>
    <string name="action_settings">Settings</string>

    <string name="field_boss">Field Boss</string>
    <string name="raid_boss">Dungeon Boss</string>
    <string name="elite_boss">Elite</string>
    <string name="unknown_boss">Unknown</string>

    <string name="baraha">Baraha the Gangster</string>
    <string name="baraha_loc">Territory of Sir Andrea</string>
    <string name="boogieccoli_maple">Boogieccoli (Maple)</string>
    <string name="boogieccoli_maple_loc">Boogieccoli Coast</string>
    <string name="boogieccoli_victoria">Boogieccoli (Victoria)</string>
    <string name="boogieccoli_victoria_loc">Boogieccoli Cave</string>
    <string name="chau_the_guard">Chau the Guard</string>
    <string name="chau_the_guard_loc">Kerning Interchange</string>
    <string name="devlin_chief">Devlin Chief</string>
    <string name="devlin_chief_loc">Northern Royal Road</string>
    <string name="devlin_warrior">Devlin Warrior</string>
    <string name="devlin_warrior_loc">Northern Royal Road</string>
    <string name="devorak">Devorak the Shadow Mage</string>
    <string name="devorak_loc">Shadow Army Altar</string>
    <string name="dun_dun">Dun Dun</string>
    <string name="dun_dun_loc">Kerning Waste Disposal Center</string>
    <string name="epie">Epie</string>
    <string name="epie_loc">Fairy Tree Lake</string>
    <string name="frankenette">Frankenette</string>
    <string name="frankenette_loc">Research Center Basement</string>
    <string name="giant_lavaeye">Giant Lavaeye</string>
    <string name="giant_lavaeye_loc">Lavaeye\'s Nest</string>
    <string name="giant_turtle">Giant Turtle</string>
    <string name="giant_turtle_loc">Beach Way 111</string>
    <string name="griffina">Griffina</string>
    <string name="griffina_loc">Trinian Highway</string>
    <string name="griffon">Griffon</string>
    <string name="griffon_loc">Cold Heart</string>
    <string name="hemokan">Hemokan</string>
    <string name="hemokan_loc">Bankorta</string>
    <string name="last_bajar">The Last Bajar</string>
    <string name="last_bajar_loc">Bischutai Mountain Top</string>
    <string name="madonette">Mad O Nette</string>
    <string name="madonette_loc">Flora Avenue</string>
    <string name="mark_alpha">Mark52 Alpha</string>
    <string name="mark_alpha_loc">Neuron DNA Research Center</string>
    <string name="mark_beta">Mark52 Beta</string>
    <string name="mark_beta_loc">Sunset Tower</string>
    <string name="mushmom">Mushmom</string>
    <string name="mushmom_loc">Someone Else\'s House</string>
    <string name="nixie">Nixie</string>
    <string name="nixie_loc">Fairy Tree Lake</string>
    <string name="revenant_zombie">Revenant Zombie</string>
    <string name="revenant_zombie_loc">Abandoned Charnel House</string>
    <string name="urza">Urza</string>
    <string name="urza_loc">Twisted Canyon</string>
    <string name="jirant">Dark Jirant</string>
    <string name="jirant_loc">Todhara\'s Spring Water</string>
    <string name="mano">Mano</string>
    <string name="mano_loc">Grinia Water Fall</string>
    <string name="windrunner_lapeng">Wind Runner Lapeng</string>
    <string name="windrunner_lapeng_loc">Molten Garden</string>
    <string name="summoner_latoon">Summoner Latoon</string>
    <string name="summoner_latoon_loc">Rose Castle</string>
    <string name="stumpy">Stumpy</string>
    <string name="stumpy_loc">Sweet Valley</string>
    <string name="urpanda">Urpanda</string>
    <string name="urpanda_loc">Rainbow Mountain</string>
    <string name="zombie_mushmom">Zombie Mushmom</string>
    <string name="zombie_mushmom_loc">Ant Tunnel Entrance</string>
    <string name="king_slime">King Slime</string>
    <string name="king_slime_loc">God\'s Spring Drop</string>
    <string name="relnos">Relnoth</string>
    <string name="relnos_loc">Purple Moon Castle</string>
    <string name="roro_n_mumus">Roro and Mumus</string>
    <string name="roro_n_mumus_loc">Baum Tree</string>
    <string name="bajar_gatekeeper">Bajar Gatekeepr</string>
    <string name="bajar_gatekeeper_loc">Steep Cliff Fortress</string>
    <string name="furious_baphomet">Furious Baphomet</string>
    <string name="furious_baphomet_loc">Castle Reverse</string>
    <string name="alpha_turtle">Alpha Turtle</string>
    <string name="alpha_turtle_loc">Ellua Riverside</string>
    <string name="captain_mock">Captain Mock</string>
    <string name="captain_mock_loc">Fortress of Moonlight Captain</string>
    <string name="pamokan">Pamokan</string>
    <string name="pamokan_loc">Ignikor</string>
    <string name="papulatus">Papulatus</string>
    <string name="papulatus_loc">Ludibrium Watchtower</string>
    <string name="horus">Horus</string>
    <string name="horus_loc">Horus Nest</string>
    <string name="chaos_baphomet">Chaose Baphomet</string>
    <string name="chaos_baphomet_loc">Forest of Chaos</string>
    <string name="toto_n_gugus">Toto and Gugus</string>
    <string name="toto_n_gugus_loc">Red Whistling Cliff</string>
    <string name="pekanos">Pekanoth</string>
    <string name="pekanos_loc">Wounded Valley</string>
    <string name="coldblooded_baphomet">Cold-Blooded Baphomet</string>
    <string name="coldblooded_baphomet_loc">Snowflake Mountain Top</string>
    <string name="ikar_madd">Ikar Madd</string>
    <string name="ikar_madd_loc">Ice Crown</string>
    <string name="trauros">Trauros</string>
    <string name="trauros_loc">Koropupu Water Fall</string>
    <string name="nine_cap_kappa">Ninecap Kappa</string>
    <string name="nine_cap_kappa_loc">Kronoff Station</string>
    <string name="earthly_lavaknight">Earth Lavanite</string>
    <string name="earthly_lavaknight_loc">Pink Heart\'s Sweet Castle</string>
    <string name="ursca">Ursca</string>
    <string name="ursca_loc">Kernel Energy Research Center</string>
    <string name="monte_de_carlo">Monte De Carlo</string>
    <string name="monte_de_carlo_loc">Ludition Carnival</string>
    <string name="phantom_destroyer">Phantom Destroyer</string>
    <string name="phantom_destroyer_loc">Phentoma Cyborg Center</string>
    <string name="lerta">Lerta</string>
    <string name="lerta_loc">Frozen Larva Hole</string>
    <string name="mark_omega">Mark52 Omega</string>
    <string name="mark_omega_loc">Tronix Bunker</string>
    <string name="shushu_n_bubus">Shushu and Bubus</string>
    <string name="shushu_n_bubus_loc">Blue Shadow Cave</string>
    <string name="forgotten_bajar">The Forgotten Bajar</string>
    <string name="forgotten_bajar_loc">Baraska Ice Cave</string>
    <string name="piros_fadd">Piros Fadd</string>
    <string name="piros_fadd_loc">Pirataros</string>
    <string name="balrog">Balrog</string>
    <string name="balrog_loc">Immortal Temple</string>
    
    
    <string name="pref_sort_by">Sort By</string>
    <string name="pref_time_format">Time Format</string>
    <string name="pref_noti_delay">Notify In</string>
    <string name="pref_noti_delay_sum">minutes before</string>
    <string name="noti_message">, the following bosses will appear :</string>
    <string name="minutes_later">" mins"</string>
    <string name="minutes_before">"m ago"</string>
    <string name="minutes_later_singular">" min"</string>
    <string name="minutes_before_singular">"m ago"</string>
    <string name="noti_title">Boss Alert</string>
    <string name="am">AM</string>
    <string name="beast_type">Beast</string>
    <string name="boss_desc_label">Description</string>
    <string name="boss_loc_label">Location</string>
    <string name="boss_type_label">Type</string>
    <string name="cheesemochi">cheesemochi</string>
    <string name="devil_type">Devil</string>
    <string name="divinity_type">Divinity</string>
    <string name="fairy_type">Fairy</string>
    <string name="human_type">Human</string>
    <string name="machine_type">Machine</string>
    <string name="minutes_now">Now</string>
    <string name="object_type">Object</string>
    <string name="plant_type">Plant</string>
    <string name="pm">PM</string>
    <string name="pref_basic_setting">Basic Setting</string>
    <string name="pref_noti_flag">Turn On</string>
    <string name="pref_noti_setting">Notification Setting</string>
    <string name="pref_select_bosses">Select Bosses</string>
    <string name="pref_show_num">Number of Bosses to Display</string>
    <string name="pref_show_setting">List Setting</string>
    <string name="spirit_type">Spirit</string>
    <string name="undead_type">Undead</string>
    <string name="sort_by_name">Name</string>
    <string name="sort_by_time">Time</string>
    <string name="time_format_minutes">Minutes Left</string>
    <string name="time_format_exact">Exact Time</string>
    <string name="menu_toggle_noti">Noti</string>


</resources>
