<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_noti_setting">
        <CheckBoxPreference
            android:key="pref_noti_flag"
            android:title="@string/pref_noti_flag"
            android:defaultValue="true"/>

        <EditTextPreference
            android:key="pref_noti_delay"
            android:title="@string/pref_noti_delay"
            android:summary=""
            android:inputType="numberDecimal"
            android:defaultValue="10"
            android:enabled="false" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="pref_noti_flag_boss_list"
        android:title="@string/pref_select_bosses"
        android:enabled="false">
    </PreferenceCategory>
</PreferenceScreen>