<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_basic_setting">
        <ListPreference
            android:key="pref_disp_type"
            android:title="@string/pref_disp_type"
            android:entries="@array/disp_tpyes"
            android:entryValues="@array/disp_tpyes_data"
            android:defaultValue="1" />
        <Preference
            android:key="pref_noti_setting"
            android:title="@string/pref_noti_setting" />
        <Preference
            android:key="pref_show_setting"
            android:title="@string/pref_show_setting" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="about"
        android:title="About">
        <Preference android:title="Version" android:summary="0.1.0" />
        <Preference android:title="Made By" android:summary="@string/cheesemochi" />
    </PreferenceCategory>
</PreferenceScreen>
